# granite-db

./: README.md
.github/workflows/: ci.yml
docs/: architecture.md  ide.md  plan-json.md  sql-support.md  storage-format.md
engine/: go.mod
engine/cmd/granitectl/: main.go  meta_test.go
engine/internal/api/: api_test.go  database.go  explain_json_test.go  meta.go  recovery.go  recovery_test.go
engine/internal/catalog/: catalog.go  catalog_test.go
engine/internal/exec/: eval.go  executor.go  executor_dml_test.go  executor_select_test.go  expression.go  index_keys.go  physical_plan.go  plan.go  rowcodec.go  rowcodec_test.go
engine/internal/sql/expr/: types.go
engine/internal/storage/: heap.go  heap_test.go  heapfile.go  manager.go  rowid.go
engine/internal/txn/: lockmgr.go  lockmgr_test.go  manager.go  manager_test.go  transaction.go
engine/internal/wal/: wal.go
ide/: .eslintrc.cjs  .gitignore  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.cjs  tauri.conf.json  tsconfig.json  vite.config.ts
ide/src/: main.tsx  styles.css
ide/src-tauri/: Cargo.toml  tauri.conf.json
ide/src-tauri/capabilities/: clipboard.json  core.json  dialog.json  fs.json  store.json  window-state.json
ide/src-tauri/icons/: icon.icns
ide/src-tauri/src/: main.rs
ide/src/app/: App.tsx
ide/src/components/: Editor.tsx  PlanView.tsx  Results.tsx  Sidebar.tsx  StatusBar.tsx  Toolbar.tsx
ide/src/lib/: csv.ts  debounce.ts  planTypes.ts
ide/src/lib/engine/: info.ts  (+1 more)
ide/src/state/: db.ts  session.ts  session.tsx
ide/tests/e2e/: app.spec.ts
(+23 files in other folders)
