[package]
name = "granite_ide"
version = "0.1.0"
authors = ["GraniteDB Team"]
edition = "2021"
description = "GraniteDB desktop IDE"

[build-dependencies]
tauri-build = { version = "2.5", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.9", features = ["default"] }
tauri-plugin-store = "2.4"
tauri-plugin-window-state = "2.4"
wait-timeout = "0.2"
